# tareas

./: main.py  pyproject.toml
database/: gestortarea (1).sql  gestortarea.sql
models/: schemasModel.py
src/: main.py
src/models/: TareasModel.py  database.py  schemas.py  schemasModel.py
src/models/views/: LoginView.py  dashboard.py
views/: LoginView.py
