[project]
name = "tareas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flet>=0.82.2",
    "mysql-connector>=2.2.9",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
# Aqui definimos el comando corto.
# Importante: Quitamos el prefijo "src." porque definiremos "src" como la raíz.
app = "main:main"

[tool.uv]
package = true

# Esta sección es cruial para que Python vea el contenido de src como el nivel raíz.
[tool.setuptools.package-dir]
"" = "src"